# student-ml-systems

./: README.md
student-ml-systems/: .gitignore  DEGREE_OUTCOME_SPEC.md  Dockerfile  EXAM_PERFORMANCE_SPEC.md  FASTAPI_SPEC.md  GRADUATE_OUTCOMES_SPEC.md  GX10_JOB_SPECS.md  IMPLEMENTATION_ORDER.md  LICENSE  MODULE_DEMAND_SPEC.md  Makefile  NSS_PREDICTION_SPEC.md  PHASE_2_BASELINES_SUMMARY.md  PHASE_3_ENROLLMENT_YIELD_SUMMARY.md  PHASE_4_EARLY_WARNING_SUMMARY.md  README.md  STUDENT_RETENTION_SPEC.md  WELLBEING_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
student-ml-systems/.github/workflows/: ci.yml
student-ml-systems/src/api/: __init__.py  main.py  models.py  predictors.py
student-ml-systems/src/api/routes/: __init__.py  degree.py  early_warning.py  enrollment.py  recommender.py
student-ml-systems/src/data/: __init__.py  feature_store.py  field_mapping.py  synthetic.py  validation.py
student-ml-systems/src/evaluation/: __init__.py  cross_validation.py  ranking_metrics.py
student-ml-systems/src/mlops/: mlflow_config.py
student-ml-systems/src/models/: __init__.py
student-ml-systems/src/models/degree_outcome/: __init__.py  data_prep.py  fairness.py  metrics.py  ordinal_classifier.py
student-ml-systems/src/models/early_warning/: __init__.py  data_prep.py  lstm.py  risk_scorer.py  survival.py
student-ml-systems/src/models/enrollment/: __init__.py  classifier.py  data_prep.py  fairness.py
student-ml-systems/src/models/exam_performance/: __init__.py  data_prep.py  metrics.py  model.py
student-ml-systems/src/models/graduate_outcomes/: __init__.py  data_prep.py  fairness.py  metrics.py  multi_task_model.py
student-ml-systems/src/models/module_demand/: __init__.py  classifier.py  data_prep.py  metrics.py  regressor.py
student-ml-systems/src/models/nss_prediction/: __init__.py  data_prep.py  metrics.py  multi_task_model.py
student-ml-systems/src/models/recommender/: __init__.py  baselines.py  collaborative.py  content_based.py  ensemble.py
student-ml-systems/src/models/student_retention/: __init__.py  data_prep.py  metrics.py  multi_task_model.py
student-ml-systems/src/models/wellbeing/: __init__.py  data_prep.py  metrics.py  model.py
student-ml-systems/src/tuning/: __init__.py  optuna_tuner.py
student-ml-systems/ui/pages/: early_warning.py
test-reports/: stripe-integration.md
